--- a/app/views/messages/_dialog.html.haml
+++ b/app/views/messages/_dialog.html.haml
@@ -16,7 +16,7 @@
         -@messages.each_with_index do |message, i|
           -if message.body.length>240 || message.body.scan(/http.*(jpg|gif|jpeg)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
             -if message.user_id==current_user.id
-              %li.from.clearfix
+              %li.from.clearfix{:data=>{:id=>message.id}}
                 %span.chat-img.pull-left
                   =image_tag avatar_url(message.user, 50),:class => "avatar"
                 .chat-body.clearfix
@@ -24,7 +24,7 @@
                     %strong.primary-font
                       =link_to message.user.login, user_path(message.user.login)
                     %small.pull-right.text-muted
-                      %span.glyphicon.glyphicon-time
+                      %span.glyphicon.glyphicon-time>
                       =message.created_at.strftime("%a %T")
                     .message
                       #short-text
@@ -44,7 +44,7 @@
                           %br
 
             -else
-              %li.to.clearfix
+              %li.to.clearfix{:data=>{:id=>message.id}}
                 %span.chat-img.pull-left
                   =image_tag avatar_url(message.user, 50),:class => "avatar"
                 .chat-body.clearfix
@@ -52,7 +52,7 @@
                     %strong.primary-font
                       =link_to message.user.login, user_path(message.user.login)
                     %small.pull-right.text-muted
-                      %span.glyphicon.glyphicon-time
+                      %span.glyphicon.glyphicon-time>
                       =message.created_at.strftime("%a %T")
                     .message
                       #short-text
@@ -72,7 +72,7 @@
                           %br
           -else
             -if message.user_id==current_user.id
-              %li.from.clearfix
+              %li.from.clearfix{:data=>{:id=>message.id}}
                 %span.chat-img.pull-left
                   =image_tag (message.user) ? avatar_url(message.user, 50) : "../img/sys-notification.png",:class => "avatar"
                 .chat-body.clearfix
@@ -80,7 +80,7 @@
                     %strong.primary-font
                       =(message.user) ? (link_to message.user.login, user_path(message.user.id)) : "chat notification"
                     %small.pull-right.text-muted
-                      %span.glyphicon.glyphicon-time
+                      %span.glyphicon.glyphicon-time>
                       =message.created_at.strftime("%a %T")
                     .message
                       %p= message.body
@@ -88,7 +88,7 @@
                         %br
                         %p.attach_file= message.attach_path
             -else
-              %li.to.clearfix
+              %li.to.clearfix{:data=>{:id=>message.id}}
                 %span.chat-img.pull-left
                   =image_tag (message.user) ? avatar_url(message.user, 50) : "../img/sys-notification.png",:class => "avatar"
                 .chat-body.clearfix
@@ -96,7 +96,7 @@
                     %strong.primary-font
                       =(message.user) ? (link_to message.user.login, user_path(message.user.id)) : "chat notification"
                     %small.pull-right.text-muted
-                      %span.glyphicon.glyphicon-time
+                      %span.glyphicon.glyphicon-time>
                       =message.created_at.strftime("%a %T")
                     .message
                       %p=message.body
