--- a/app/assets/stylesheets/lobby.css
+++ b/app/assets/stylesheets/lobby.css
@@ -529,6 +529,7 @@ h2.public{
     border: medium none;
     font-size: 12px;
     max-height: 100%;
+    height:100%;
     padding: 0;
     width: 100%;
 }
