--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,5 +14,26 @@
       = yield
   - else
     %body
+      %script{:type=>"text/template", :id=>"template_message"}
+        {{#messages}}
+        %li{:class=>"{{#equal user_id}}{{/equal}} clearfix", "data"=>{"id" => "{{id}}"}}
+          %span.chat-img.pull-left
+            %img.avatar{src: "{{avatar}}"}
+          .chat-body.clearfix
+            .header
+              %strong.primary-font
+                {{#change_login user_id login}}{{/change_login}}
+              %small.pull-right.text-muted
+                %span.glyphicon.glyphicon-time
+                {{create_at}}
+              .message
+                {{#safe_mess messages}}{{/safe_mess}}
+              {{#if attach_file_path}}
+              %p.attach-file
+                {{#attach-files attach_file_path}}{{/attach-files}}
+              {{/if}}
+        {{/messages}}
       = yield
+
+
 
