--- a/app/views/messages/_dialog.html.haml
+++ b/app/views/messages/_dialog.html.haml
@@ -32,7 +32,7 @@
                           %span.glyphicon.glyphicon-chevron-down{style: "cursor: pointer;"}
                         -if message.body.scan(/http.*(jpg|gif|jpeg)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
                           .text-muted
-                            %i= "this text has a content..."
+                            %i= "This message has a content..."
                         -else
                           %p= truncate(message.body, separator: ' ', length: 112)
                       #long-text{style: "display: none;"}
@@ -59,7 +59,7 @@
                           %span.glyphicon.glyphicon-chevron-down{style: "cursor: pointer;"}
                         -if message.body.scan(/http.*(jpg|gif|jpeg)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
                           .text-muted
-                            %i= "this text has a content..."
+                            %i= "This message has a content..."
                         -else
                           %p= truncate(message.body, separator: ' ', length: 112)
                       #long-text{style: "display: none;"}
