--- a/app/views/messages/_dialog.html.haml
+++ b/app/views/messages/_dialog.html.haml
@@ -14,7 +14,7 @@
     #messages-wrapper
       -@messages.each_with_index do |message, i|
         -if message.body.length>240 || message.body.scan(/http.*(jpg|gif|jpeg)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
-          %li.clearfix{:data=>{:id=>message.id},:class=>(message.user_id==current_user.id ? "from" : "to")}
+          %li.clearfix{:data=>{:id=>message.id},:class=>(message.user_id==current_user.id ? "from" : "to" )}
             %span.chat-img.pull-left
               =image_tag avatar_url(message.user, 50),:class => "avatar"
             .chat-body.clearfix
@@ -41,7 +41,7 @@
                       %br
                       %p.attach_file= message.attach_path    
         -else
-          %li.clearfix{:data=>{:id=>message.id},:class=>"to"}
+          %li.clearfix{:data=>{:id=>message.id},:class=>(message.user_id==current_user.id ? "from" : "to")}
             %span.chat-img.pull-left
               =image_tag (message.user) ? avatar_url(message.user, 50) : "../img/sys-notification.png",:class => "avatar"
             .chat-body.clearfix
@@ -52,7 +52,10 @@
                   %span.glyphicon.glyphicon-time>
                   =message.created_at.strftime("%a %T")
                 .message
-                  %p=message.body    
+                  %p=message.body
+                  -if message.attach_path?
+                    %br
+                    %p.attach_file= message.attach_path 
   .input
     = form_for @message, :authenticity_token => true, :url => messages_path,:id=>"form-message", :name => "messageForm", :html => {:multipart => true}, :method=>"post" do |f|
       %table{:cellspacing => "0", :width => "100%"}
