--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -94,7 +94,7 @@
                   - current_user.friends.each do |friend|
                     .member{:friend_id => friend.id}
                       = link_to user_path(friend.login) do
-                        %span{:class=>get_user_status_style(friend.user_status)}>
+                        %span{:class=>get_user_status_style(friend.user_status)}
                         = "#{friend.login}"
                       - if !user_in_room?(@room.id, friend.id)
                         %span.glyphicon.glyphicon-plus.pull-right.user_friend{:data=>{:user_id => friend.id}}
@@ -104,7 +104,7 @@
               %ul
               -@attah.each do |attach|
                 %li
-                  =link_to attach.attach_path.file.filename , attach.attach_path.url
+                  =link_to attach.attach_path.file.filename, attach.attach_path.url
                   %br
                   %small.text-muted
                     = "#{attach.user.login}"
