delete empty files

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,8 @@
  *
  *= require_self
  *= require all
- *= require backgrounds
- *= require bootstrap
+ *= require bootstrap.min
+ *= require jquery.confirmon
  *= require chat
  *= require sprite
  *= require emoji
