--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -76,7 +76,7 @@
     }
     .chat-body p {
       margin: 0;
-      color: #777777;
+      color: black;
       white-space: pre-line;
       white-space: -moz-pre-line;
       /* Mozilla, since 1999 */
