--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -20,6 +20,8 @@
   %li
     = link_to  user_omniauth_authorize_path(:facebook), class: 'navbar-brand' do
       %img{:src=>"../img/facebook.ico",:class=>"social-button"}
+      Sign in with facebook
   %li
     = link_to user_omniauth_authorize_path(:github), class: 'navbar-brand' do
       %img{:src=>"../img/github.jpg", :class=>"social-button"}
+      Sign in with github
