--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,6 +9,9 @@
       Write me on:
       = "#{@user.email}"
   %br
+    Avatar supported by
+    = link_to 'gravatar.com', 'https://ru.gravatar.com', {:target => "_blank"}
+  %br
   %br
   %span#find_more_friends
     = link_to 'Find new friends', users_path
