--- a/app/assets/stylesheets/all.css
+++ b/app/assets/stylesheets/all.css
@@ -11,6 +11,16 @@
 	margin: 0;
 	padding: 0;
 }
+scrollbar {
+    -moz-appearance: none !important;
+    background: rgb(0,255,0) !important;
+}
+
+thumb,
+scrollbarbutton {
+    -moz-appearance: none !important;
+    background-color: rgb(0,0,255) !important;
+}
 a{
 	text-decoration: none;
 }
