--- a/app/assets/stylesheets/lobby.css
+++ b/app/assets/stylesheets/lobby.css
@@ -54,7 +54,7 @@ body {background-color: #f0f0f0;line-height: normal;}
 }
 .content p{
     text-shadow:0 0 3px rgba(150,150,150,.5);
-    font-size: 14px;
+    font-size: 13px;
 }
 .chat-txt{
     margin-bottom:67px;
@@ -298,6 +298,7 @@ h2.public{
     background-color: #FFFFFF;
     border: 1px solid #E2E2E2;
     width: 100%;
+    margin: 0 -5px;
 }
 
 .tableContainer{
@@ -308,6 +309,7 @@ h2.public{
     position: absolute;
     right: 205px;
     top: 180px;
+    margin: 0 -5px;
 }
 
 .rooms_group tr{
