--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -14,13 +14,15 @@
   %h3
     Possible friends
   .tableContainer
-    %table.rooms_group
-      - @possible_friends.each do |user|
-        %tr{:friend_id => user.id}
-          %td.name
-            .friend_photo
-              = image_tag avatar_url(user,50),:class => "avatar"
-            .friend_name
-            = link_to "#{user.login}", user_path(user.login)
-          %td.friend_action.add_friend
-            %span{:class => "glyphicon glyphicon-plus add_new_friend"}
+    .nano
+      .nano-content
+        %table.rooms_group
+          - @possible_friends.each do |user|
+            %tr{:friend_id => user.id}
+              %td.name
+                .friend_photo
+                  = image_tag avatar_url(user,50),:class => "avatar"
+                .friend_name
+                = link_to "#{user.login}", user_path(user.login)
+              %td.friend_action.add_friend
+                %span{:class => "glyphicon glyphicon-plus add_new_friend"}
