--- a/app/views/messages/_dialog.html.haml
+++ b/app/views/messages/_dialog.html.haml
@@ -15,7 +15,7 @@
     #messages-wrapper
       - if @messages
         -@messages.each_with_index do |message, i|
-          -if message.body.length>240 || message.body.scan(/http.*(jpg|gif|jpeg)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
+          -if message.body.length>800
             -if message.user_id==current_user.id
               %li.from.clearfix{:data=>{:id=>message.id}}
                 %span.chat-img.pull-left
@@ -31,9 +31,9 @@
                       #short-text
                         %small.pull-right.text-muted
                           %span.glyphicon.glyphicon-chevron-down{style: "cursor: pointer;"}
-                        -if message.body.scan(/http.*(jpg|gif|jpeg)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
+                        -if message.body.scan(/http.*(jpg|gif|jpeg|png)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
                           .text-muted
-                            %i= "this text has a content..."
+                            %i= "this message has a content..."
                         -else
                           %p= truncate(message.body, separator: ' ', length: 112)
                       #long-text{style: "display: none;"}
@@ -58,9 +58,9 @@
                       #short-text
                         %small.pull-right.text-muted
                           %span.glyphicon.glyphicon-chevron-down{style: "cursor: pointer;"}
-                        -if message.body.scan(/http.*(jpg|gif|jpeg)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
+                        -if message.body.scan(/http.*(jpg|gif|jpeg|png)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
                           .text-muted
-                            %i= "this text has a content..."
+                            %i= "this message has a content..."
                         -else
                           %p= truncate(message.body, separator: ' ', length: 112)
                       #long-text{style: "display: none;"}
