--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -17,7 +17,7 @@
 
       - @room_list.each do |room|
         %li#room
-          = link_to "#{room.name}", room_path( id: room.id ), class: "#{get_link_class(room)}"
+          = link_to "#{room.name}", room_path( id: room.id ), room_id: room.id, class: "#{get_link_class(room)}"
   #status_ui
     =image_tag avatar_url(current_user, 50), class: 'avatar_mini'
     .dropdown
