--- a/app/views/messages/_dialog.html.haml
+++ b/app/views/messages/_dialog.html.haml
@@ -16,7 +16,7 @@
         #messages-wrapper
           - if @messages
             -@messages.each_with_index do |message, i|
-              -if message.body.length>240 || message.body.scan(/http.*(jpg|gif|jpeg)/)!=[] || message.body.scan(/http.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?].\S\S*)/)!=[] || message.body.scan(/http:\/\/(coub\.com\/view\/.*|coub\.com\/embed\/.*)/i)!=[]
+              -if message.body.length>800
                 -if message.user_id==current_user.id
                   %li.from.clearfix{:data=>{:id=>message.id}}
                     %span.chat-img.pull-left
