--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -45,4 +45,4 @@
   %h3 Cancel my account
   %p
     Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete}.
-  = link_to "Back", :back, :class => 'button right'
+  = link_to "Back", rooms_path, :class => 'button right'
