--- a/app/views/rooms/_show_rooms_list.html.haml
+++ b/app/views/rooms/_show_rooms_list.html.haml
@@ -6,13 +6,13 @@
         %a.clean
           = link_to "#{room.name}",room_path( id: room.id ), room_id: room.id
       %td.memb-count
-        = room.rooms_users.count
+        = room.users.count
         = 'members'
       %td.owner
         = 'Owned by: '
-        = link_to "#{room.user.login}", user_path(room.user.login)
+        = link_to "#{room.creator.login}", user_path(room.creator.login)
       %td.set-arr
-        -if room.user.login == current_user.login
+        -if room.creator.login == current_user.login
           %span.delete_room.glyphicon.glyphicon-remove-circle{ data: { id: room.id } }
 
 
