--- a/app/views/messages/_dialog.html.haml
+++ b/app/views/messages/_dialog.html.haml
@@ -99,6 +99,9 @@
               %span.glyphicon.glyphicon-ok.ok#lineh
               %label.upload-place
                 = f.file_field :attach_path ,:id=>"attach_path"
+            %td{:width => "1px"}
+              %div.video-chat.upload-but
+                %span.glyphicon.glyphicon-earphone
             %td{:width => "1%"}
               = f.hidden_field :room_id, :value=>@room_id
               %label.upload-but{:for => "attach_path"}
