edit mailer messages

--- a/app/views/user_mailer/welcome_email.text.haml
+++ b/app/views/user_mailer/welcome_email.text.haml
@@ -1,2 +1,5 @@
 = @user.firstname
 , Thank you for registering!
+%hr
+%br
+You can start from =link_to "here", ENV['HOSTNAME_SITE']+"/rooms/#{@room}", method: :delete
