add part of video chat to modal window

--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -169,7 +169,7 @@
 .ui-dialog{
   z-index: 9999;
   overflow-y: scroll;
-  width: 350px !important;
+  width: auto !important;
 }
 
 .video-stream {
