--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -139,3 +139,15 @@ ul#friends_list {
   font-size: 20px;
   margin-top: 0px;
 }
+
+#email {
+
+  background: none repeat scroll 0 0 #FAFAFA;
+  border: 1px solid #DBDBDB;
+  border-radius: 5px;
+  color: #525252;
+  font-size: 16px;
+  height: 35px;
+  outline-color: #005B94;
+  padding: 5px;
+}
