--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -71,7 +71,9 @@ ul#friends_list {
   list-style: none;
   overflow-y: auto;
 }
-
+.glyphicon-plus{
+  top: 18px;
+}
 .friend{
   float: left;
   width: 440px;
