--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -74,6 +74,9 @@ ul#friends_list {
 .glyphicon-plus{
   top: 18px;
 }
+.glyphicon-minus{
+  top: 18px;
+}
 .friend{
   float: left;
   width: 440px;
