--- a/app/assets/stylesheets/all.css
+++ b/app/assets/stylesheets/all.css
@@ -556,3 +556,12 @@ div.server-upsell {
 /* sign_up end */
 .tabbable .active{background-color: white;}
 .textcomplete-wrapper{height:100%;}
+.social-button
+{
+    display: inline;
+    width: 35px;
+}
+.navbar-brand>.social-button
+{
+    width: 20px;
+}
