added pagination for links

--- a/app/assets/stylesheets/lobby.css
+++ b/app/assets/stylesheets/lobby.css
@@ -635,6 +635,7 @@ span.glyphicon.glyphicon-remove:hover{
     position: fixed;
     padding: 0 5px;
     overflow: auto;
+    width: 10.5%;
 }
 
 .left h1{
