--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -130,4 +130,6 @@
                   %small.text-muted
                     = "#{link.created_at}"
                   %br
+              = will_paginate @links
+
   .footer
