--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -9,6 +9,7 @@
         = f.label :login
         %br/
         = f.text_field :login, class: 'form-control'
+    .form-group
       %div
         = f.label :firstname
         %br/
@@ -41,8 +42,10 @@
           %i (we need your current password to confirm your changes)
           %br/
           = f.password_field :current_password, class: 'form-control'
-    %div= f.submit "Update", :class => 'button right'
-  %h3 Cancel my account
-  %p
-    Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete}.
+      .form-group
+        %div
+        = f.submit "Update", :class => 'button right'
+  %h3 Cancel account
   = link_to "Back", rooms_path, :class => 'button right'
+  %p
+    Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :class => 'button right', :data => { :confirm => "Are you sure?" }, :method => :delete}
