Edit user info via modal dialog

--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -59,7 +59,10 @@
           = link_to destroy_user_session_path, :method=>'delete', :tabindex => "-1" do
             %span.glyphicon.glyphicon-share-alt.drop-col-mar>
             Sign out
-    %a.glyphicon.glyphicon-cog{:href=>edit_user_registration_path}
+    -#--------------------------------------------------------------------
+    -#%a.glyphicon.glyphicon-cog{:href=>edit_user_registration_path}
+    %a.glyphicon.glyphicon-cog{"data-target" => "#editModal", "data-toggle" => "modal", :type => "button"}
+    -#--------------------------------------------------------------------
 %aside.right_panel
   .top-form
     -if request.path!="/rooms" and @room
@@ -83,7 +86,10 @@
             - @room_users.each do |user|
               .member{:data=>{:toggle=>"tooltip",:user_id => user.id, :room_id => @room.id}, :title=>"#{user.user_status=="Offline" ? "Offline "+time_ago_in_words(user.updated_at) : user.user_status}"}
                 %span{:class=>get_user_status_style(user.user_status)}
-                = link_to "#{user.login}", "#"
+                - if user == current_user
+                  = link_to "#{user.login}", "#", :class => "current_user_login"
+                - else
+                  = link_to "#{user.login}", "#"
                 - if user.id != current_user.id && @room.user_id == current_user.id
                   %span{:class => "glyphicon glyphicon-minus pull-right drop_room_user"}
           .friend-list.right_search_user
