--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -20,7 +20,7 @@
             %li#room
               = link_to "#{room.name}", room_path( id: room.id ), room_id: room.id, class: "#{get_link_class(room)}"
   #status_ui
-    =image_tag avatar_url(current_user, 50), class: 'avatar_mini'
+    = image_tag avatar_url( current_user, 50 ), class: 'avatar_mini'
     .dropdown
       %a#drop1.dropdown-toggle.avail{ 'data-toggle' => 'dropdown', href: '#', role: 'button', type: 'button' }
         %span{ class: get_user_status_style(current_user.user_status) }>
@@ -88,7 +88,7 @@
                 %input#search-user.form-control{ placeholder: 'Search...', width: '70%' }
                 .panel-body.right_search
                   - current_user.friends.each do |friend|
-                    - if !user_in_room?(@room.id, friend.id)
+                    - if !user_in_room?( @room.id, friend.id )
                       .member{ friend_id: friend.id }
                         = link_to user_path(friend.login) do
                           %span{ class: get_user_status_style(friend.user_status) }
@@ -100,7 +100,7 @@
               %ul
               -@attach.each do |attach|
                 %li
-                  =link_to attach.attach_path.file.filename, attach.attach_path.url
+                  = link_to attach.attach_path.file.filename, attach.attach_path.url
                   %br
                   %small.text-muted
                     = "#{attach.user.login}"
@@ -114,7 +114,7 @@
               %ul
               - @links.each do |link|
                 %li
-                  =link_to link.body.match(/(\b\w+:\/\/\w+((\.\w)*\w+)*\.\w{2,3}(\/\S*|\.\w*|\?\w*\=\S*)*)/), link.body, {:target => "_blank"}
+                  = link_to link.body.match(/(\b\w+:\/\/\w+((\.\w)*\w+)*\.\w{2,3}(\/\S*|\.\w*|\?\w*\=\S*)*)/), link.body, { target: '_blank' }
                   %br
                   %small.text-muted
                     = "#{link.user.login}"
