--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,24 +1,25 @@
 !!!
 %html
   %head
-    = include_gon(:init => true)
-    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
-    %title= content_for?(:title) ? yield(:title) : 'Chat'
-    %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Chat'}"}
-    %script{:src=>"http://js.pusher.com/2.1/pusher.min.js"}
-    = stylesheet_link_tag "application", media: "all"
+    = include_gon( init: true )
+    %meta{ name: 'viewport', content: 'width = device-width, initial-scale = 1.0'}
+    %title
+      = content_for?(:title) ? yield(:title) : 'Chat'
+    %meta{ name: 'description', content: "#{content_for?(:description) ? yield(:description) : 'Chat'}" }
+    %script{ src: 'http://js.pusher.com/2.1/pusher.min.js' }
+    = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
-    = javascript_include_tag "application"
-  - if !@background_image.nil?
-    %body{:style=>("background-image:url('#{@background_image.path}');")}
+    = javascript_include_tag 'application'
+  - if @background_image.present?
+    %body{ style: ( "background-image:url('#{@background_image.path}');" ) }
       = yield
   - else
     %body
-      %script{:type=>"text/template", :id=>"template_message"}
+      %script{ type: 'text/template', id: 'template_message' }
         {{#messages}}
-        %li{:class=>"{{#equal user_id}}{{/equal}} clearfix", "data"=>{"id" => "{{id}}"}}
+        %li{ class: '{{#equal user_id}}{{/equal}} clearfix', 'data' => { 'id' => '{{id}}' } }
           %span.chat-img.pull-left
-            %img.avatar{src: "{{avatar}}"}
+            %img.avatar{ src: '{{avatar}}' }
           .chat-body.clearfix
             .header
               %strong.primary-font
